--- a/flower.html
+++ b/flower.html
@@ -315,7 +315,21 @@
   </div>
 
   <!-- Title -->
-  <h1 class="title"><span id="title"></span></h1>
+  <h1 class="title"><span id="title"></span>
+  </h1>
+  <!-- Subtitle -->
+  <div style="position: absolute; display: block; top: 10%; width: 100; height: 100;">
+    <img style=" display:none; max-width: 400px; left:0%" id="bigpic" src="images\20250622_123442-COLLAGE.jpg" />
+  </div>
+  
+  <h2>    
+    <div style="position: absolute; top: 90%; left: 45%; display: flex; justify-content: center;">
+      <button onclick="showPic()" class="button">
+        <span class="text">写真</span>
+      </button>
+    </div> 
+  </h2>
+ 
 </body>
 
 </html>
